feat: 🎨 lets find the issue

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ universal = 1
 
 [semantic_release]
 version_variable = setup.py:__version__
-branch=master
+branch=main
 upload_to_repository=false
 version_source = tag
 tag_commit = true
