--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,19 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    // {
+    //   "name": "Launch Chrome",
+    //   "request": "launch",
+    //   "type": "pwa-chrome",
+    //   "url": "http://localhost:8080",
+    //   "webRoot": "${workspaceFolder}"
+    // },
     {
-      "name": "Python: Current File",
+      "name": "Python: Module",
       "type": "python",
       "request": "launch",
-      "program": "app.py",
-      "console": "integratedTerminal"
+      "module": "semantic_release",
+      "args": ["changelog -v DEBUG"]
     }
   ]
 }
